[gd_scene load_steps=11 format=3 uid="uid://do5qry4lwxkv1"]

[ext_resource type="Script" path="res://scripts/zombie.gd" id="1_cm0d7"]
[ext_resource type="Texture2D" uid="uid://bpufkobbgchrh" path="res://assets/textures/player.png" id="2_em821"]
[ext_resource type="Texture2D" uid="uid://c0j6l4vd0urev" path="res://assets/textures/Light Shape.svg" id="3_1ejhg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_am67w"]
size = Vector2(92, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5abww"]
size = Vector2(63, 106)

[sub_resource type="Animation" id="Animation_6unyw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qxdh6"]
resource_name = "idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eggmo"]
_data = {
"RESET": SubResource("Animation_6unyw"),
"idle": SubResource("Animation_qxdh6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_tg0kw"]
radius = 142.014

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4flov"]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 10.01
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 40.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 10.0
scale_max = 10.0
color = Color(0.435294, 0, 0, 1)

[node name="zombie" type="CharacterBody2D" groups=["Zombies"]]
collision_layer = 17
collision_mask = 3
motion_mode = 1
script = ExtResource("1_cm0d7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.499977, -51)
rotation = 1.5708
shape = SubResource("RectangleShape2D_am67w")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -42)
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -9)
shape = SubResource("RectangleShape2D_5abww")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0.509804, 0.247059, 1)
position = Vector2(0, -56)
scale = Vector2(4, 4)
texture = ExtResource("2_em821")
hframes = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eggmo")
}

[node name="Healthbar" type="ProgressBar" parent="."]
modulate = Color(0.917647, 0, 0, 1)
offset_left = -52.0
offset_top = -135.0
offset_right = 51.0
offset_bottom = -108.0
step = 0.1
value = 100.0
metadata/_edit_use_anchors_ = true

[node name="Timers" type="Node" parent="."]

[node name="Attack" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="Area Light" type="PointLight2D" parent="."]
position = Vector2(0, -52)
energy = 0.4
texture = ExtResource("3_1ejhg")
texture_scale = 0.31

[node name="Detection Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection Area"]
position = Vector2(0, -51)
shape = SubResource("CircleShape2D_tg0kw")

[node name="GPUParticles2D" type="GPUParticles2D" parent="." groups=["Death Particles"]]
position = Vector2(0, -54)
emitting = false
amount = 1000
process_material = SubResource("ParticleProcessMaterial_4flov")
lifetime = 3.0
one_shot = true
speed_scale = 10.51
explosiveness = 1.0
visibility_rect = Rect2(0, 0, 0, 0)
local_coords = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timers/Attack" to="." method="_on_attack_timeout"]
